scheduling and statistic feature